package de.dhbw.demo.override;

public interface Display {

    void update(int index, String row);

}