@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

scale 0.8

interface Display {
  update(index, row)
}
class DefaultDisplay {
  update(index, row)
}
class PlatformDisplay {
  update(index, row)
}

Display         <..   DefaultDisplay
DefaultDisplay  <--   PlatformDisplay

@enduml